--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang-eng>
 <title> New Zealand Polluted Rivers </title>
@@ -32,13 +32,23 @@
 
 
 			
-			<h5><img class="right" src="Sewer.PNG" width="100px" hspace="1%"/> <br><br>Suspendisse pretium feugiat est. Nulla aliquam dictum vestibulum. Integer risus ligula, imperdiet nec elit ac, molestie placerat nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ante massa, ultricies et mollis varius, elementum non metus. Cras vulputate ut tortor a rhoncus. Donec euismod lectus vel dui lobortis, ut mattis elit tristique. Donec nulla lorem, hendrerit at nisi ac, fringilla auctor dolor. Integer quis lobortis magna, in interdum lectus. Sed eget venenatis augue. Nunc imperdiet dolor metus, a venenatis enim blandit in. Quisque accumsan odio ac luctus mattis. Praesent aliquet eu odio ac egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer erat ex, volutpat sed lorem nec, tincidunt consequat diam. Aenean sed accumsan arcu, et luctus ipsum.<br><br><br></h5>
+			<h5><img class="right" src="IMG_0476.JPG" width="200px" hspace="1%"/> <br><br>
+New Zealand is known to have amazing scenery and beautiful lakes and rivers but how healthy are those beautiful lakes and rivers really? New Zealand Rivers used to once be rivers where people loved to swim but now due to contamination lots of the rivers are off limits to the public for swimming. The problem is that people should be allowed to swim in them again and fix the contamination.
+<br><br><br></h5>
 		<br>
-			<h5>Suspendisse pretium feugiat est. Nulla aliquam dictum vestibulum. Integer risus ligula, imperdiet nec elit ac, molestie placerat nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ante massa, ultricies et mollis varius, elementum non metus. Cras vulputate ut tortor a rhoncus. Donec euismod lectus vel dui lobortis, ut mattis elit tristique. Donec nulla lorem, hendrerit at nisi ac, fringilla auctor dolor. Integer quis lobortis magna, in interdum lectus. Sed eget venenatis augue. Nunc imperdiet dolor metus, a venenatis enim blandit in. Quisque accumsan odio ac luctus mattis. Praesent aliquet eu odio ac egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer erat ex, volutpat sed lorem nec, tincidunt consequat diam. Aenean sed accumsan arcu, et luctus ipsum.</h5>
+    <h5><img class="left" src="Sewer.PNG" width="120" height="160px" hspace="1%"/><br><br>Two thirds of our lakes are not able to be swum in and half our lakes are irreversibly damaged. For every litre of milk that is produced 1,000 litres of water in irrigation is used. If the New Zealand waters are polluted that means that all of the water that is being put into the dairy cows that can not be healthy for the milk that 20% of people all across the globe drink.<br><br><br>
+</h5>
 		<br>
-			<h5>Suspendisse pretium feugiat est. Nulla aliquam dictum vestibulum. Integer risus ligula, imperdiet nec elit ac, molestie placerat nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ante massa, ultricies et mollis varius, elementum non metus. Cras vulputate ut tortor a rhoncus. Donec euismod lectus vel dui lobortis, ut mattis elit tristique. Donec nulla lorem, hendrerit at nisi ac, fringilla auctor dolor. Integer quis lobortis magna, in interdum lectus. Sed eget venenatis augue. Nunc imperdiet dolor metus, a venenatis enim blandit in. Quisque accumsan odio ac luctus mattis. Praesent aliquet eu odio ac egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer erat ex, volutpat sed lorem nec, tincidunt consequat diam. Aenean sed accumsan arcu, et luctus ipsum.</h5>
+			<h5><img class="right" src="IMG_0526.JPG" width="120" height="160px" hspace="1%"/><br><br>While a person was researching the waters of Havelock North they found that almost 5,000 of their 15,000 inhabitants were ill from a bug and 3 deaths were later linked to the outbreak of the bug. This could have been bad as this bug had the potential to spread across the country but fortunately was mostly contained to the area.<br><br><br>
+</h5>
 
 	
 	</body>
 
+	<br>
+	<br>
+<footer>
+	&copy; Will Bargh
+</footer>
 
+</html>
